Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-3984

crash/read of freed memory when changing master with named connection

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.0.0
    • 10.0.2
    • None
    • None
    • On Linux, produced valgrind warnings.
      On Windows mysqld.exe segfaulted.

    Description

      How to repeat:
      ----------------
      change master 'abc' to relay_log_file='';

      Description:
      ---------------------
      Linux, valgrind output:

      Invalid read of size 8
      at: mysql_execute_command (sql_parse.cc:2589)
      by: mysql_parse (sql_parse.cc:6056)
      by: dispatch_command (sql_parse.cc:1216)
      by: do_command (sql_parse.cc:945)
      by: do_handle_one_connection (sql_connect.cc:1254)
      by: handle_one_connection (sql_connect.cc:1168)
      by: start_thread (pthread_create.c:309)
      by: clone (clone.S:115)
      Address 0x15b2dae0 is 0 bytes inside a block of size 16,216 free'd
      at: operator delete (vg_replace_malloc.c:480)
      by: free_key_master_info (rpl_mi.cc:635)
      by: my_hash_delete (hash.c:604)
      by: Master_info_index::remove_master_info (rpl_mi.cc:1049)
      by: mysql_execute_command (sql_parse.cc:2588)
      by: mysql_parse (sql_parse.cc:6056)
      by: dispatch_command (sql_parse.cc:1216)
      by: do_command (sql_parse.cc:945)
      by: do_handle_one_connection (sql_connect.cc:1254)
      by: handle_one_connection (sql_connect.cc:1168)
      by: start_thread (pthread_create.c:309)
      by: clone (clone.S:115)

      Windows, call stack:
      mysqld.exe!mysql_execute_command()[sql_parse.cc:2592]
      mysqld.exe!mysql_parse()[sql_parse.cc:6061]
      mysqld.exe!dispatch_command()[sql_parse.cc:1219]
      mysqld.exe!do_command()[sql_parse.cc:951]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:225]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]

      Attachments

        Activity

          People

            knielsen Kristian Nielsen
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.